# SaltPy-Public

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/api/: SonarPy.md  SonarPyVista.md
examples/: example.ipynb  example_simple.ipynb
src/saltpy/: igrf13_install.py  public.py
