[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saltpy"
version = "0.0.8"
authors = [
  { name = "Matthew Bauer, PG", email = "bauer@agapito.com" },
]
description = "Tools for the processing, analysis, and display of salt cavern data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "geopandas",
  "shapely",
  "scikit-image",
  "scipy",
  "pyvista",
  "numpy-stl",
  "wellpathpy",
  "requests",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://www.agapito.com/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["saltpy"]